--- a/input.css
+++ b/input.css
@@ -100,8 +100,7 @@
 
         .prose img {
             display: inline;
-            margin-left: 0;
-            margin-right: 0;
+            margin: 0;
             vertical-align: middle;
         }
     }
