appview/pages: hide non-existent pipelines from pulls view
go templates decides that invalid map index in templates should result
in the zero value for some reason.

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -105,7 +105,7 @@
                     </span>
 
                     {{ $pipeline := index $.Pipelines .LatestSha }}
-                    {{ if $pipeline }}
+                    {{ if and $pipeline $pipeline.Id }}
                       <span class="before:content-['·']"></span>
                       {{ template "repo/pipelines/fragments/pipelineSymbol" $pipeline }}
                     {{ end }}
