appview/signup: username blacklist
Signed-off-by: Anirudh Oppiliappan <anirudh@tangled.sh>

--- a/appview/pages/templates/user/completeSignup.html
+++ b/appview/pages/templates/user/completeSignup.html
@@ -51,7 +51,7 @@
                             name="code"
                             tabindex="1"
                             required
-                            placeholder="pds-tngl-sh-foo-bar"
+                            placeholder="tngl-sh-foo-bar"
                         />
                         <span class="text-sm text-gray-500 mt-1">
                             Enter the code sent to your email.
