appview/pages: rework signup pages
- new /signup page to enter email ID
- login page has a link to go signup
- signup page has a link to go back to login

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -15,6 +15,10 @@
                     {{ block "dropDown" . }} {{ end }}
                 {{ else }}
                     <a href="/login">login</a>
+                    <span class="text-gray-500 dark:text-gray-400">or</span>
+                    <a href="/signup" class="btn-create py-0 hover:no-underline hover:text-white flex items-center gap-2">
+                      join now {{ i "arrow-right" "size-4" }}
+                    </a>
                 {{ end }}
             </div>
         </div>
