--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -3,35 +3,17 @@
     <html lang="en" class="dark:bg-gray-900">
         <head>
             <meta charset="UTF-8" />
-            <meta
-                name="viewport"
-                content="width=device-width, initial-scale=1.0"
-            />
-            <meta
-                property="og:title"
-                content="login · tangled"
-            />
-            <meta
-                property="og:url"
-                content="https://tangled.sh/login"
-            />
-            <meta
-                property="og:description"
-                content="login to or sign up for tangled"
-            />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <meta property="og:title" content="login · tangled" />
+            <meta property="og:url" content="https://tangled.sh/login" />
+            <meta property="og:description" content="login to for tangled" />
             <script src="/static/htmx.min.js"></script>
-            <link
-                rel="stylesheet"
-                href="/static/tw.css?{{ cssContentHash }}"
-                type="text/css"
-            />
-            <title>login or sign up &middot; tangled</title>
+            <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
+            <title>login &middot; tangled</title>
         </head>
         <body class="flex items-center justify-center min-h-screen">
             <main class="max-w-md px-6 -mt-4">
-                <h1
-                    class="text-center text-2xl font-semibold italic dark:text-white"
-                >
+                <h1 class="text-center text-2xl font-semibold italic dark:text-white" >
                     tangled
                 </h1>
                 <h2 class="text-center text-xl italic dark:text-white">
@@ -51,7 +33,7 @@
                             name="handle"
                             tabindex="1"
                             required
-                            placeholder="foo.tngl.sh"
+                            placeholder="akshay.tngl.sh"
                         />
                         <span class="text-sm text-gray-500 mt-1">
                             Use your <a href="https://atproto.com">ATProto</a>
@@ -61,7 +43,7 @@
                     </div>
 
                     <button
-                        class="btn w-full my-2 mt-6"
+                        class="btn w-full my-2 mt-6 text-base "
                         type="submit"
                         id="login-button"
                         tabindex="3"
@@ -69,60 +51,10 @@
                         <span>login</span>
                     </button>
                 </form>
-                <hr class="my-4">
-                <p class="text-sm text-gray-500 mt-4">
-                    Alternatively, you may create an account on Tangled below. You will
-                    get a <code>user.tngl.sh</code> handle.
+                <p class="text-sm text-gray-500">
+                  Don't have an account? <a href="/signup" class="underline">Create an account</a> on Tangled now!
                 </p>
 
-                <details class="group">
-
-                    <summary
-                        class="btn cursor-pointer w-full mt-4 flex items-center justify-center gap-2"
-                    >
-                        create an account
-
-                        <div class="group-open:hidden flex">{{ i "arrow-right" "w-4 h-4" }}</div>
-                        <div class="hidden group-open:flex">{{ i "arrow-down" "w-4 h-4" }}</div>
-                    </summary>
-                    <form
-                        class="mt-4 max-w-sm mx-auto"
-                        hx-post="/signup"
-                        hx-swap="none"
-                        hx-disabled-elt="#signup-button"
-                    >
-                        <div class="flex flex-col mt-2">
-                            <label for="email">email</label>
-                            <input
-                                type="email"
-                                id="email"
-                                name="email"
-                                tabindex="4"
-                                required
-                                placeholder="jason@bourne.co"
-                            />
-                        </div>
-                        <span class="text-sm text-gray-500 mt-1">
-                        You will receive an email with a code. Enter that, along with your
-                        desired username and password in the next page to complete your registration.
-                        </span>
-                        <button
-                            class="btn w-full my-2 mt-6"
-                            type="submit"
-                            id="signup-button"
-                            tabindex="7"
-                        >
-                            <span>sign up</span>
-                        </button>
-                    </form>
-                </details>
-                <p class="text-sm text-gray-500 mt-6">
-                    Join our <a href="https://chat.tangled.sh">Discord</a> or
-                    IRC channel:
-                    <a href="https://web.libera.chat/#tangled"
-                        ><code>#tangled</code> on Libera Chat</a
-                    >.
-                </p>
                 <p id="login-msg" class="error w-full"></p>
             </main>
         </body>
