appview/pages: link to signup page in timeline view
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -34,8 +34,8 @@
         </p>
 
         <div class="flex gap-6 items-center">
-          <a href="/login" class="no-underline hover:no-underline ">
-            <button class="btn flex gap-2 px-4 items-center">
+          <a href="/signup" class="no-underline hover:no-underline ">
+            <button class="btn-create flex gap-2 px-4 items-center">
               join now {{ i "arrow-right" "size-4" }}
             </button>
           </a>
