appview: pages/templates/repo: fix styling for file tree items
Signed-off-by: Safwan Parkar <safwanparkar6@gmail.com>

--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -61,11 +61,12 @@
 
           {{ if .IsFile }}
             {{ $icon = "file" }}
-            {{ $iconStyle = "size-4" }}
+            {{ $iconStyle = "flex-shrink-0 size-4" }}
           {{ end }}
           <a href="{{ $link }}" class="{{ $linkstyle }}">
             <div class="flex items-center gap-2">
-              {{ i $icon $iconStyle }}{{ .Name }}
+              {{ i $icon $iconStyle }}
+              <span class="truncate">{{ .Name }}</span>
             </div>
           </a>
         </div>
