--- a/appview/pages/templates/user/fragments/repoCard.html
+++ b/appview/pages/templates/user/fragments/repoCard.html
@@ -28,10 +28,11 @@
 {{ define "repoStats" }}
   <div class="text-gray-400 pt-4 text-sm font-mono inline-flex gap-4 mt-auto">
     {{ with .Language }}
-        <div class="flex gap-2 items-center text-sm">
-          <div class="size-2 rounded-full" style="background-color: {{ langColor . }};"></div>
-            <span>{{ . }}</span>
-        </div>
+      <div class="flex gap-2 items-center text-sm">
+        <div class="size-2 rounded-full" 
+          style="background: radial-gradient(circle at 35% 35%, color-mix(in srgb, {{ langColor . }} 70%, white), {{ langColor . }} 30%, color-mix(in srgb, {{ langColor . }} 85%, black));"></div>
+        <span>{{ . }}</span>
+      </div>
     {{ end }}
     {{ with .StarCount }}
         <div class="flex gap-1 items-center text-sm">
