--- a/input.css
+++ b/input.css
@@ -70,6 +70,10 @@
         details summary::-webkit-details-marker {
             display: none;
         }
+
+        code {
+            @apply font-mono p-1 rounded bg-gray-100 dark:bg-gray-700;
+        }
     }
 
     @layer components {
